# GFF_3D_organoid_profiling_pipeline

./: .gitignore  .pre-commit-config.yaml  =  README.md  config.py
0.preprocessing_data/: HPC_preprocessing.sh  README.md  dw_testing.sh  local_preprocessing.sh  pyproject.toml  visualize_convolutions.sh
0.preprocessing_data/huygens_workflow_files/: batch_process_405.hgsb  batch_process_488.hgsb  batch_process_555.hgsb
0.preprocessing_data/mapping_utils/: well_map.json
0.preprocessing_data/notebooks/: 0.patient_specific_preprocessing.ipynb  0.update_file_structure.ipynb  00.NF0014_preprocessing.ipynb  1.make_z-stack_images.ipynb  1.make_zstack_and_copy_over.ipynb  1.update_file_structure.ipynb  1z.make_zstack_and_copy_over_CQ1.ipynb  2.calculate_signal_noise_ratio.ipynb  2.make_z-stack_images.ipynb  2.perform_file_corruption_checks.ipynb  2a.make_z-stack_images.ipynb  2b.perform_file_corruption_checks.ipynb  3.decon_preprocessing.ipynb  3.perform_file_corruption_checks.ipynb  3.visualize_z-decay.ipynb  4.decon_post_processing.ipynb  5.visualize_decon.ipynb  6.peform_image_convolutions.ipynb  8.visualize_convolutions_3d.ipynb  nyquist_sampling_calculations.ipynb
0.preprocessing_data/results/: snr_data.csv
0.preprocessing_data/scripts/: 0.patient_specific_preprocessing.py  0.update_file_structure.py  00.NF0014_preprocessing.py  1.make_z-stack_images.py  1.make_zstack_and_copy_over.py  1.update_file_structure.py  2.calculate_signal_noise_ratio.py  2.make_z-stack_images.py  2.perform_file_corruption_checks.py  2a.make_z-stack_images.py  2b.perform_file_corruption_checks.py  3.perform_file_corruption_checks.py  3.visualize_z-decay.r  4.decon_post_processing.py  5.visualize_decon.py  6.peform_image_convolutions.py  8.visualize_convolutions_3d.py  nyquist_sampling_calculations.py
1.image_quality_control/: run_image_qc.sh
1.process_images/: local_segmentation.sh  run_cellpose_on_alpine.sh
1.segment_images/: README.md  child_segmentation.sh  local_segmentation.sh  parent_segmentation.sh  rerun_jobs.txt
2.cellprofiling/: HPC_run_featurization_child.sh  HPC_run_featurization_grand_parent.sh  HPC_run_featurization_parent.sh  README.md  child_featurize-12410193.out  features_extracted.md  local_run_featurization.sh
2.segment_images/: child_segmentation.sh  child_segmentation_nf.sh  clean_up_segmentation_intermediates.sh  clean_up_segmentation_intermediates_parent.sh  grand_parent_segmentation.sh  local_parent.sh  local_segmentation.sh  parent_resubmit_HPC.sh  parent_resubmit_local.sh  parent_segmentation.sh  parent_segmentation_HPC.sh  segmentation_child-13382336.out  segmentation_child-13382338.out  segmentation_child-13382339.out  segmentation_child-13382340.out  segmentation_child-13382341.out  segmentation_child-13382342.out  segmentation_child-13382343.out  segmentation_child-13382344.out  segmentation_child-13382345.out  segmentation_child-13382346.out  segmentation_child-13382347.out  segmentation_child-13382348.out  segmentation_child-13382349.out  segmentation_child-13382350.out  segmentation_child-13382351.out  segmentation_child-13382352.out  segmentation_child-13382353.out  segmentation_child-13382354.out  segmentation_child-13382355.out  segmentation_child-13382356.out  segmentation_child-13382357.out  segmentation_child-13382358.out  segmentation_child-13382359.out  segmentation_child-13382360.out  segmentation_child-13382361.out  segmentation_child-13382362.out  segmentation_child-13382364.out  segmentation_child-13382365.out  segmentation_child-13382366.out  (+1097 more)
3.cellprofiling/: HPC_run_featurization_grand_parent.sh  HPC_run_featurization_great_grand_parent.sh  HPC_run_featurization_parent.sh  README.md  (+4 more)
3a.DL_features/: pyproject.toml  run_point_bert.sh
3a.DL_features/notebooks/: 3D_SAM_featurize.ipynb  generate_point_clouds.ipynb  pointBert_call.ipynb
3a.DL_features/scripts/: 3D_SAM_featurize.py  generate_point_clouds.py  pointBert_call.py
3a.DL_features/utils/: Dockerfile  microscope_pointcloud.py  pointbert_featurizer.py  pyproject.toml  sammed3d_featurizer.py
src/featurization_utils/: pyproject.toml
src/featurization_utils/src/: sammed3d_featurizer.py
src/file_utils/: pyproject.toml
(+609 files in other folders)
